--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "hono": "^4.7.7",
     "prisma": "^6.6.0"
   },
