--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@vinayak11/medium-common": "^1.0.3",
     "hono": "^4.7.7",
     "prisma": "^6.6.0"
   },
